@@ -28,7 +28,7 @@
   e2f730e78dc27254776b672fc007a4bef3dd0f56 2010090601 mingw32-autotools.xml
   9de97172522316bb359227b484cfc9bc4c5b6c5a 2011060500 mingw32-base.xml
   221dd61fa0e2d7745ba41d05d18a3114e946c513 2012073100 mingw32-basic-bsdtar.xml
-  2e422f7ef9f923561a038da518a872532900e13a 2011120300 mingw32-binutils.xml
+  d1b4081a78ca60cac8c67fa84a6fb6b697075309 2012111500 mingw32-binutils.xml
   b4c60a4702749a0369b5059e7c1f50ce567e2c95 2012073100 mingw32-bzip2.xml
   c2fa4fe580615c774f72216fb06e35a909a08ba6 2012040200 mingw32-cygutils.xml
   def4cf3df5f61690f8bfc409727e80480336bcfa 2012090900 mingw32-dos2unix.xml
